# dinotxt

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  PACKAGING.md  README.md  __init__.py  example_usage.py  inference.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/: transforms.py
eval/text/: dinotxt_model.py  text_tower.py  text_transformer.py  tokenizer.py  vision_tower.py
hub/: backbones.py  dinotxt.py  utils.py
layers/: __init__.py  attention.py  block.py  ffn_layers.py  layer_scale.py  patch_embed.py  rope_position_encoding.py
models/: __init__.py  vision_transformer.py
utils/: __init__.py  utils.py
